@@ -119,7 +119,6 @@ public class TypeCacherJob extends BasicJob {
 	
 	private void flush(ITypeSearchScope scope, IProgressMonitor monitor) throws InterruptedException {
 		// flush the cache
-		boolean success = true;
 		IProject project = fTypeCache.getProject();
 
 		monitor.beginTask("", 100); //$NON-NLS-1$
@@ -127,11 +126,11 @@ public class TypeCacherJob extends BasicJob {
 		fTypeCache.flush(scope);
 		if (!scope.encloses(project)) {
 			if (project.exists() && project.isOpen()) {
-			    success = doIndexerJob(new IndexerDependenciesJob(fIndexManager, fTypeCache, scope), monitor);
+			    doIndexerJob(new IndexerDependenciesJob(fIndexManager, fTypeCache, scope), monitor);
 			}
 		}
 
-		if (!success || monitor.isCanceled()) {
+		if ( monitor.isCanceled() ) {
 			throw new InterruptedException();
 		}
 		
@@ -139,15 +138,14 @@ public class TypeCacherJob extends BasicJob {
 	}
 	
 	private void update(ITypeSearchScope scope, IProgressMonitor monitor) throws InterruptedException {
-		boolean success = true;
 		IProject project = fTypeCache.getProject();
 		
 		monitor.beginTask("", 100); //$NON-NLS-1$
 		if (project.exists() && project.isOpen()) {
-		    success = doIndexerJob(new IndexerTypesJob(fIndexManager, fTypeCache, scope), monitor);
+		    doIndexerJob(new IndexerTypesJob(fIndexManager, fTypeCache, scope), monitor);
 		}
 
-		if (!success || monitor.isCanceled()) {
+		if (monitor.isCanceled()) {
 			throw new InterruptedException();
 		}
 		
