@@ -1,4 +1,9 @@
 2005-08-04 Alain Magloire
+	Fix taken from 3.0 PR 104907
+	* browser/org/eclipse/cdt/internal/core/browser/cache/TypeCache.java
+	* browser/org/eclipse/cdt/internal/core/browser/cache/TypeCacheJob.java
+
+2005-08-04 Alain Magloire
 	Part fix for PR 100992: The signature was incorrect for structure/unions.
 	* model/org/eclipse/cdt/internal/core/model/CModelBuilder.java
 
